[project]
name = "liveu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "loguru>=0.7.3",
    "makelive>=0.6.2",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
